--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,3 +1,44 @@
+h1 {
+  font-size: 44px;
+}
+
+@media screen and (max-width: 991px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
+h2 {
+  font-size: 32px;
+}
+
+@media screen and (max-width: 991px) {
+  h2 {
+    font-size: 24px;
+  }
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 16px;
+}
+
+p {
+  font-size: 20px;
+  line-height: 40px;
+  word-spacing: 3.5px;
+}
+
+@media screen and (max-width: 991px) {
+  p {
+    font-size: 18px;
+    line-height: 32px;
+  }
+}
+
 #dark-overlay {
   position: fixed;
   top: 0;
@@ -16,6 +57,10 @@ hr {
   border-radius: 7px;
   border: 1px solid #31353f;
   padding: 0.5rem 1rem;
+}
+
+.text-yellow {
+  color: #ffc32c;
 }
 
 .text-light {
@@ -434,20 +479,57 @@ hr {
   }
 }
 
-.modal {
+.custom-modal {
   position: fixed;
   z-index: 7;
   background-color: #fff;
   border-radius: 10px;
-  padding: 2rem 1.5rem;
+  padding: 5rem 1.5rem 2rem;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: 90%;
+  height: 90%;
+}
+
+.custom-modal:not(.small-width) .close {
+  top: 2.75rem;
+}
+
+.custom-modal:not(.small-width) .close.top-right {
+  top: 1rem;
+  right: 1rem;
 }
 
 @media screen and (max-width: 768px) {
-  .modal {
+  .custom-modal:not(.small-width) .close {
+    top: 2rem;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .custom-modal:not(.small-width) {
+    top: unset;
+    bottom: 0;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .custom-modal:not(.small-width) {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    height: 100%;
+    left: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .custom-modal {
     top: unset;
     -webkit-transform: unset;
             transform: unset;
@@ -460,74 +542,74 @@ hr {
 }
 
 @media screen and (max-width: 575px) {
-  .modal {
+  .custom-modal {
     height: 100%;
   }
 }
 
-.modal .close {
+.custom-modal .close {
   position: absolute;
   top: 1rem;
   right: 1.5rem;
+  cursor: pointer;
 }
 
-.modal .modal-head {
+.custom-modal .modal-head {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 560px;
   margin-left: auto;
   margin-right: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding-bottom: 0.75rem;
-  border-bottom: 1px solid #eeeeee;
 }
 
 @media screen and (max-width: 575px) {
-  .modal .modal-head {
+  .custom-modal .modal-head {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
   }
 }
 
-.modal .modal-head .img {
+.custom-modal .modal-head .img {
   margin-right: 1rem;
 }
 
-.modal .modal-head .img img {
+.custom-modal .modal-head .img img {
   width: 56px;
 }
 
 @media screen and (max-width: 575px) {
-  .modal .modal-head .img img {
+  .custom-modal .modal-head .img img {
     width: 32px;
   }
 }
 
-.modal .modal-head .title {
+.custom-modal .modal-head .title {
   font-size: 20px;
   font-weight: 600;
 }
 
 @media screen and (max-width: 575px) {
-  .modal .modal-head .title {
+  .custom-modal .modal-head .title {
     font-size: 18px;
   }
 }
 
-.modal .modal-head small {
+.custom-modal .modal-head small {
   color: #b2b2b2;
   font-size: 16px;
 }
 
-.modal.small-width {
+.custom-modal.small-width {
   width: 660px;
+  height: unset;
 }
 
 .slidecontainer {
@@ -580,17 +662,50 @@ hr {
 }
 
 .btn {
-  padding: 0.65rem 3rem;
+  padding: 0.65rem 2rem;
   font-size: 14px;
 }
 
 .btn-outlined-dark {
   border: 2px solid #31353f;
   border-radius: 50px;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+.btn-outlined-dark:hover {
+  color: #fff;
+  background-color: #31353f;
 }
 
 .btn-bg-primary {
   background-color: #ffc32c;
   border-radius: 50px;
+  border: 2px solid transparent;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+.btn-bg-primary:hover {
+  background-color: transparent;
+  border-color: #ffc32c;
+}
+
+input.custom-input {
+  width: 100%;
+  border-radius: 5px;
+  padding: 0.5rem;
+  border: 1px solid #b2b2b2;
+  font-weight: 600;
+}
+
+input.custom-input:focus {
+  outline: none;
+}
+
+input.custom-input.active {
+  border-color: #ffc32c;
+  -webkit-box-shadow: 0 0 7px rgba(255, 195, 44, 0.4);
+          box-shadow: 0 0 7px rgba(255, 195, 44, 0.4);
 }
 /*# sourceMappingURL=utilities.css.map */
